# agent-hive

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  mcp-plot-server.py  pyproject.toml  requirements.txt
agent_hive/: __init__.py  __main__.py  _cli.py
core/: __init__.py  base_agent.py  config.py  master_agent.py  memory.py  tools.py  worker_agent.py
utils/: log.py  security.py
