[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hive"
version = "0.1.0"
description = "基于 LangGraph + MCP 的多 Agent 分层协作框架"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["agent", "langgraph", "mcp", "llm", "hive"]

authors = [
    {name = "agent-hive"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langchain>=1.3",
    "langchain-core>=1.4",
    "langchain-openai>=1.3",
    "langchain-mcp-adapters>=0.3",
    "langgraph>=1.2",
    "langgraph-checkpoint-sqlite>=3.1",
    "mcp>=1.27",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.1",
    "matplotlib>=3.10",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["agent_hive*", "core*", "utils*"]

[project.scripts]
agent-hive = "agent_hive._cli:main"
